Fix images and scrollbar

--- a/thesis/website/style.css
+++ b/thesis/website/style.css
@@ -18,28 +18,13 @@
 }
 
 figure {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50% !important;
-    padding-left: 5%;
-    padding-right: 5%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
 }
-
-.largeFig > figure {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width:100%;
-    height:auto;
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
 img {
-    max-width:100% !important;
-    max-height:100% !important;
-    width: 1000000cm !important;
+    margin: auto;
+    display: block;
 }
 
 figcaption {
@@ -55,4 +40,22 @@ table {
 .sourceCode pre {
     display: flex;
     justify-content: center;
+}
+
+mjx-container {
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+}
+::-webkit-scrollbar {
+    width: 20px;
+  }
+::-webkit-scrollbar-track {
+background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 4px solid transparent;
+    background-clip: content-box;
 }
